# locus

./: .gitignore  Cargo.toml  README.md
.beads/: issues.jsonl  metadata.json
.github/workflows/: rust.yml
docs/captures/: demo-dark-expanded-methylation.ansi.txt  demo-dark-expanded-methylation.html  demo-expanded-methylation.ansi.txt  demo-expanded-methylation.html  demo-light-expanded-methylation.ansi.txt  demo-light-expanded-methylation.html
examples/demo/: README.md  build.sh  capture.sh  demo.fa  demo.fa.fai  demo.gff  demo.sam  demo.sorted.bam  demo.sorted.bam.bai  demo.sorted.gff.gz.tbi
src/: app.rs  bam.rs  cache.rs  cli.rs  error.rs  events.rs  gff.rs  main.rs  methylation.rs  reference.rs  region.rs  screenshot.rs  theme.rs  ui.rs
src/render/: coverage.rs  features.rs  mod.rs  reads.rs  reference.rs  ruler.rs
