[package]
name = "locus-tui"
version = "0.2.1"
edition = "2024"
description = "A terminal genome browser for BAM files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bwbioinfo/locus"
keywords = ["genomics", "bioinformatics", "bam", "gtf", "gff"]
categories = ["science", "command-line-utilities"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/docs/captures/**",
    "/docs/images/**",
    "/examples/**",
    "/src/**",
]

[[bin]]
name = "locus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
noodles-bam = "0.72"
noodles-sam = "0.68"
noodles-core = "0.15"
noodles-bgzf = "0.34"
noodles-gff = "0.57"
noodles-tabix = "0.58"
noodles-core-018 = { package = "noodles-core", version = "0.18" }
noodles-bgzf-044 = { package = "noodles-bgzf", version = "0.44" }
noodles-csi-052 = { package = "noodles-csi", version = "0.52" }

[profile.release]
opt-level = 3
